--- a/japps/templates/japps/archive.html
+++ b/japps/templates/japps/archive.html
@@ -1,6 +1,6 @@
 {% extends "japps/base.html" %}
 {% block body %}
-  {% if messagse %}
+  {% if messages %}
     <ul>
       {% for message in messages %}
         <li{% if message.tags %} class="messages {{ message.tags }}"{% endif %}><strong>{{ message.tags|capfirst }}</strong> {{ message }}</li>
