changed dropdown cursor to be a pointer for homogeneity with other links

--- a/japps/static/japps/stylesheet.css
+++ b/japps/static/japps/stylesheet.css
@@ -108,6 +108,9 @@
 .des_logo {
   width: 90%;
 }
+.menu li .dropbtn {
+  cursor:pointer;
+}
 .menu li .dropbtn:hover {
   text-shadow: 1px 1px 6px #315683;
 }
