--- a/japps/static/japps/stylesheet.css
+++ b/japps/static/japps/stylesheet.css
@@ -136,6 +136,41 @@
 .menu li a:hover {
   text-shadow: 1px 1px 6px #315683;
 }
+@media only screen and ( max-width: 500px ) {
+  .menu {
+    position: relative;
+    display: block !important;
+    width: 100%;
+    float: none;
+    padding: 0;
+  }
+  .menu li {
+    display: block;
+    height: auto;
+    position: relative;
+    width: 100%;
+    clear: both;
+    float: none;
+    background-color: white;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  }
+  .menu li .dropdown {
+    display: block;
+    height: auto;
+    position: relative;
+    width: 100%;
+    clear: both;
+    float: none;
+  }
+  .menu li ul#prof_dropdown {
+    height: auto;
+    position: relative;
+    width: 100%;
+    clear: both;
+    float: none;
+    padding: 0;
+  }
+}
 .description p {
   font-size: large;
   font-family: "Roboto", "Noto Serif";
