--- a/japps/static/japps/stylesheet.css
+++ b/japps/static/japps/stylesheet.css
@@ -152,7 +152,9 @@
     clear: both;
     float: none;
     background-color: white;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 8px 0px rgba(0,0,0,0.2);
+    text-align: center;
+    border-bottom: 1px solid #DEE0DF;
   }
   .menu li .dropdown {
     display: block;
@@ -169,6 +171,13 @@
     clear: both;
     float: none;
     padding: 0;
+    box-shadow: none !important;
+    margin-top: 0.3em;
+  }
+  .menu li ul#prof_dropdown li {
+    box-shadow: none !important;
+    border-top: 1px solid #DEE0DF;
+    border-bottom: none;
   }
 }
 .description p {
