--- a/japps/templates/japps/index.html
+++ b/japps/templates/japps/index.html
@@ -10,6 +10,7 @@
   {% else %}
     <p>To see a list of available applications as a non registered user go <a href="/applications">here</a>.</p> <p>To submit a job you must first log in with a <a href="https://user.cyverse.org/">Cyverse</a> account.</p>
     <p></p>
+    <p>If it's the first time you use the UK System please <a href="/contact">contact us</a> and ask to be added to the users list.</p>
     <p class="warning"><strong>{{ risposta }}</strong></p>
       <a href="{{ auth_link }}"><input type="submit" value="Login with Cyverse" /></a>
   {% endif %}
