added description and pages with links for mrbayes and portcullis

--- a/japps/templates/japps/static_description.html
+++ b/japps/templates/japps/static_description.html
@@ -24,6 +24,23 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col-xs-12 col-md-10 col-md-offset-1">
+        <div class="col-xs-12 col-sm-4">
+          <a href="{% url 'japps:app_description' app_name='MrBayes' %}"><img class="des_logo" src="{% static 'japps/images/Thomas_Bayes.gif' %}" alt="[IMAGE: MrBayes picture]"/></a>
+          <p></p>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+          <a href="{% url 'japps:app_description' app_name='Portcullis' %}"><img class="des_logo" src="{% static 'japps/images/portcullis_logo.png' %}" alt="[IMAGE: Portcullis logo]"/></a>
+          <p></p>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+          <a href="" alt=""/></a>
+          <p></p>
+        </div>
+      </div>
+    </div>
+
     <h3>Coming soon</h3>
 
     <div class="row">
