--- a/japps/templates/japps/contact.html
+++ b/japps/templates/japps/contact.html
@@ -1,4 +1,23 @@
 {% extends "japps/base.html" %}
+{% load static %}
+{% block more_styles %}
+<script async>window.twttr = (function(d, s, id) {
+var js, fjs = d.getElementsByTagName(s)[0],
+  t = window.twttr || {};
+if (d.getElementById(id)) return t;
+js = d.createElement(s);
+js.id = id;
+js.src = "https://platform.twitter.com/widgets.js";
+fjs.parentNode.insertBefore(js, fjs);
+
+t._e = [];
+t.ready = function(f) {
+  t._e.push(f);
+};
+
+return t;
+}(document, "script", "twitter-wjs"));</script>
+{% endblock %}
 {% block body %}
   {% comment %}
     the for cycle for messages is always required to empty the list
@@ -10,7 +29,14 @@
       {% endfor %}
     </ul>
   {% endif %}
-  <h2>Contact us</h2>
+  <p><strong>Need help?</strong></p>
+  <p.>If you'd like access to our system, need help or support with the website, you found a bug or you want your app to be hosted on our system <em><span style="color:#108E8B; font-weight:500">get in touch!</span></em><br/>We're in <a href="https://www.google.co.uk/maps/place/Earlham+Institute+(EI)/@52.6217407,1.2189869,15z/data=!4m5!3m4!1s0x0:0xe81f4f0aca5e363a!8m2!3d52.6217407!4d1.2189869">Norwich, UK</a>, and will get back to you ASAP in office hours!</p>
+  <a class="twitter-mention-button" href="https://twitter.com/intent/tweet?screen_name=cyverseuk">Tweet to @cyverseuk</a>
+  <h1 style="font-size:21px; color:#108E8B">Contact us</h1>
+  <h2>How can we help?</h2>
+  <img img src="{% static 'japps/images/annemarie-eckes-circle.png' %}" alt="[IMAGE: Annemarie]" style="max-width: 10%"/>
+  <img img src="{% static 'japps/images/rob-davey-circle.png' %}" alt="[IMAGE: Rob]" style="max-width: 10%"/>
+  <img img src="{% static 'japps/images/alice-minotto-circle.png' %}" alt="[IMAGE: Alice]" style="max-width: 10%"/>
   <form action="" method="post">
     {% csrf_token %}
     <table>
