--- a/japps/templates/japps/static_description.html
+++ b/japps/templates/japps/static_description.html
@@ -48,6 +48,12 @@
         <div class="col-xs-12 col-sm-2">
           <a href="{% url 'japps:app_description' app_name='Polymarker' %}"><img class="des_logo" src="{% static 'japps/images/polymarker-300x74.png' %}" alt="[IMAGE: Polymarker logo]" /></a>
         </div>
+        <div class="col-xs-12 col-sm-2">
+          <a href="{% url 'japps:app_description' app_name='Beast2' %}"><img class="des_logo" src="{% static 'japps/images/cropped-Beast2-logo.jpg' %}" alt="[IMAGE: Beast2 logo]" /></a>
+        </div>
+        <div class="col-xs-12 col-sm-2">
+          <a href="{% url 'japps:app_description' app_name='RAxML' %}"><img class="des_logo" src="{% static 'japps/images/raxml.jpg' %}" alt="[IMAGE: RAxML logo]" /></a>
+        </div>
       </div>
     </div>
 
