--- a/japps/templates/japps/submission.html
+++ b/japps/templates/japps/submission.html
@@ -4,7 +4,7 @@
 <script type="text/javascript" src="{% static 'japps/upload_button.js' %}"></script>
 {% endblock %}
 {% block body %}
-  <h2>{{ title }}</h2>
+  <h2>{{ title|capfirst }}</h2>
 
   <p>{{ description }}</p>
 
