--- a/japps/static/japps/stylesheet.css
+++ b/japps/static/japps/stylesheet.css
@@ -182,6 +182,9 @@
     border-top: 1px solid #DEE0DF;
     border-bottom: none;
   }
+  .team_pic {
+    min-width: 20%;
+  }
 }
 .description p {
   font-size: large;
