--- a/japps/templates/japps/contact.html
+++ b/japps/templates/japps/contact.html
@@ -35,9 +35,9 @@ return t;
 </br></br></br></br>
   <h1 style="font-size:21px; color:#108E8B">Contact us</h1>
   <h2>How can we help?</h2>
-  <img img src="{% static 'japps/images/annemarie-eckes-circle.png' %}" alt="[IMAGE: Annemarie]" style="max-width: 10%"/>
-  <img img src="{% static 'japps/images/rob-davey-circle.png' %}" alt="[IMAGE: Rob]" style="max-width: 10%"/>
-  <img img src="{% static 'japps/images/alice-minotto-circle.png' %}" alt="[IMAGE: Alice]" style="max-width: 10%"/>
+  <img class="team_pic" img src="{% static 'japps/images/annemarie-eckes-circle.png' %}" alt="[IMAGE: Annemarie]" style="max-width: 10%"/>
+  <img class="team_pic" img src="{% static 'japps/images/rob-davey-circle.png' %}" alt="[IMAGE: Rob]" style="max-width: 10%"/>
+  <img class="team_pic" img src="{% static 'japps/images/alice-minotto-circle.png' %}" alt="[IMAGE: Alice]" style="max-width: 10%"/>
   <form action="" method="post">
     {% csrf_token %}
     <table>
