--- a/japps/templates/japps/static_description.html
+++ b/japps/templates/japps/static_description.html
@@ -8,9 +8,28 @@
   <div class="container-fluid">
 
     <div class="row">
+      <!--<h1>Earlham deveoped applications</h1>-->
       <div class="col-xs-12 col-md-10 col-md-offset-1">
         <div class="col-xs-12 col-sm-4">
           <a href="{% url 'japps:app_description' app_name='GWasser' %}"><img class="des_logo" src="{% static 'japps/images/GWASSER_LOGO.png' %}" alt="[IMAGE: GWasser logo]"/></a>
+          <p></p>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+          <a href="{% url 'japps:app_description' app_name='Mikado' %}"><img class="des_logo" src="{% static 'japps/images/mikado-logo.png' %}" alt="[IMAGE: Mikado logo]"/></a>
+          <p></p>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+          <a href="{% url 'japps:app_description' app_name='Portcullis' %}"><img class="des_logo" src="{% static 'japps/images/portcullis_logo.png' %}" alt="[IMAGE: Portcullis logo]"/></a>
+          <p></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row" style="flex-wrap:wrap">
+      <!--<h1>Other available applications</h1>-->
+      <div class="col-xs-12 col-md-10 col-md-offset-1">
+        <div class="col-xs-12 col-sm-4">
+          <a href="{% url 'japps:app_description' app_name='Beast2' %}"><img class="des_logo" src="{% static 'japps/images/cropped-Beast2-logo.jpg' %}" alt="[IMAGE: Beast2 logo]" style="vertical-align:middle" /></a>
           <p></p>
         </div>
         <div class="col-xs-12 col-sm-4">
@@ -18,24 +37,19 @@
           <p></p>
         </div>
         <div class="col-xs-12 col-sm-4">
-          <a href="{% url 'japps:app_description' app_name='Mikado' %}"><img class="des_logo" src="{% static 'japps/images/mikado-logo.png' %}" alt="[IMAGE: Mikado logo]"/></a>
-          <p></p>
-        </div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-xs-12 col-md-10 col-md-offset-1">
-        <div class="col-xs-12 col-sm-4">
           <a href="{% url 'japps:app_description' app_name='MrBayes' %}"><img class="des_logo" src="{% static 'japps/images/Thomas_Bayes.gif' %}" alt="[IMAGE: MrBayes picture]"/></a>
           <p></p>
         </div>
         <div class="col-xs-12 col-sm-4">
-          <a href="{% url 'japps:app_description' app_name='Portcullis' %}"><img class="des_logo" src="{% static 'japps/images/portcullis_logo.png' %}" alt="[IMAGE: Portcullis logo]"/></a>
+          <a href="{% url 'japps:app_description' app_name='RAxML' %}"><img class="des_logo" src="{% static 'japps/images/raxml.jpg' %}" alt="[IMAGE: RAxML logo]" /></a>
           <p></p>
         </div>
         <div class="col-xs-12 col-sm-4">
-          <a href="" alt=""/></a>
+          <a href=""/></a>
+          <p></p>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+          <a href=""/></a>
           <p></p>
         </div>
       </div>
@@ -49,10 +63,10 @@
           <a href="{% url 'japps:app_description' app_name='Polymarker' %}"><img class="des_logo" src="{% static 'japps/images/polymarker-300x74.png' %}" alt="[IMAGE: Polymarker logo]" /></a>
         </div>
         <div class="col-xs-12 col-sm-2">
-          <a href="{% url 'japps:app_description' app_name='Beast2' %}"><img class="des_logo" src="{% static 'japps/images/cropped-Beast2-logo.jpg' %}" alt="[IMAGE: Beast2 logo]" /></a>
+
         </div>
         <div class="col-xs-12 col-sm-2">
-          <a href="{% url 'japps:app_description' app_name='RAxML' %}"><img class="des_logo" src="{% static 'japps/images/raxml.jpg' %}" alt="[IMAGE: RAxML logo]" /></a>
+
         </div>
       </div>
     </div>
