flex row, make easier to keep alphabetical order

--- a/japps/templates/japps/static_description.html
+++ b/japps/templates/japps/static_description.html
@@ -45,7 +45,7 @@
           <p></p>
         </div>
         <div class="col-xs-12 col-sm-4">
-          <a href=""/></a>
+          <a href="{% url 'japps:app_description' app_name='Tuxedo' %}"/><img class="des_logo" src="{% static 'japps/images/tuxedo.png' %}" alt="[IMAGE: Tuxedo]" /></a>
           <p></p>
         </div>
         <div class="col-xs-12 col-sm-4">
