add images for a number of app in the available app page and add css rule to have all columns at same eighth for correct wrapping

--- a/japps/static/japps/stylesheet.css
+++ b/japps/static/japps/stylesheet.css
@@ -261,3 +261,8 @@ form table td ul li {
 form table td ul li input {
   display: inline !important;
 }
+.equal {
+  display: flex;
+  display: -webkit-flex;
+  flex-wrap: wrap;
+}
