--- a/japps/templates/japps/static_description.html
+++ b/japps/templates/japps/static_description.html
@@ -59,21 +59,44 @@
       </div>
     </div>
 
+<p> A number of other application to handle bioinformatics data on HPC are available, e.g. concatenate files, uncompress archives orr extract columns from a tabular file.</p>
+
     <h3>Coming soon</h3>
 
-    <div class="row">
-      <div class="col-xs-12 col-sm-12">
+    <div class="row equal" style="flex-wrap:wrap">
         <div class="col-xs-12 col-sm-2">
           <a href="{% url 'japps:app_description' app_name='Polymarker' %}"><img class="des_logo" src="{% static 'japps/images/polymarker-300x74.png' %}" alt="[IMAGE: Polymarker logo]" /></a>
         </div>
         <div class="col-xs-12 col-sm-2">
-
+          <a href="{% url 'japps:app_description' app_name='bedtools' %}"><img class="des_logo" src="{% static 'japps/images/bedtools.png' %}" alt="[IMAGE: bedtools logo]" /></a>
         </div>
         <div class="col-xs-12 col-sm-2">
-
+          <a href="{% url 'japps:app_description' app_name='BLAST' %}"><img class="des_logo" src="{% static 'japps/images/blast.png' %}" alt="[IMAGE: BLAST logo]" /></a>
         </div>
-      </div>
-    </div>
+        <div class="col-xs-12 col-sm-2">
+          <a href="{% url 'japps:app_description' app_name='btrim' %}"><img class="des_logo" src="{% static 'japps/images/btrim.png' %}" alt="[IMAGE: btrim logo]" /></a>
+        </div>
+        <div class="col-xs-12 col-sm-2">
+          <a href="{% url 'japps:app_description' app_name='Cufflinks' %}"><img class="des_logo" src="{% static 'japps/images/cufflinks.png' %}" alt="[IMAGE: Cufflinks logo]" /></a>
+        </div>
+        <div class="col-xs-12 col-sm-2">
+          <a href="{% url 'japps:app_description' app_name='cutadapt' %}"><img class="des_logo" src="{% static 'japps/images/cutadapt.png' %}" alt="[IMAGE: cutadapt logo]" /></a>
+        </div>
+        <div class="col-xs-12 col-sm-2">
+          <a href="{% url 'japps:app_description' app_name='MUSCLE' %}"><img class="des_logo" src="{% static 'japps/images/muscle.png' %}" alt="[IMAGE: MUSCLE logo]" /></a>
+        </div>
+        <div class="col-xs-12 col-sm-2">
+          <a href="{% url 'japps:app_description' app_name='Ontologizer' %}"><img class="des_logo" src="{% static 'japps/images/ontologizer.png' %}" alt="[IMAGE: Ontologizer logo]" /></a>
+        </div>
+        <div class="col-xs-12 col-sm-2">
+          <a href="{% url 'japps:app_description' app_name='SAMtools' %}"><img class="des_logo" src="{% static 'japps/images/samtools.png' %}" alt="[IMAGE: SAMtools logo]" /></a>
+        </div>
+        <div class="col-xs-12 col-sm-2">
+          <a href="{% url 'japps:app_description' app_name='Sickle' %}"><img class="des_logo" src="{% static 'japps/images/sickle.png' %}" alt="[IMAGE: Sickle logo]" /></a>
+        </div>
+        <div class="col-xs-12 col-sm-2">
+          <a href="{% url 'japps:app_description' app_name='TopHat' %}"><img class="des_logo" src="{% static 'japps/images/tophat.png' %}" alt="[IMAGE: TopHat logo]" /></a>
+        </div>
 
   </div>
 
