--- a/japps/static/japps/stylesheet.css
+++ b/japps/static/japps/stylesheet.css
@@ -266,3 +266,7 @@ form table td ul li input {
   display: -webkit-flex;
   flex-wrap: wrap;
 }
+.vertical-align {
+    display: flex;
+    align-items: center;
+}
