--- a/japps/templates/japps/static_description.html
+++ b/japps/templates/japps/static_description.html
@@ -29,11 +29,31 @@
       </div>
     </div>
 
-    <div class="row" style="flex-wrap:wrap">
+    <div class="row equal" style="flex-wrap:wrap">
       <!--<h1>Other available applications</h1>-->
-      <div class="col-xs-12 col-md-10 col-md-offset-1">
+      <div class="row equal vertical-align col-xs-12 col-md-10 col-md-offset-1">
         <div class="col-xs-12 col-sm-4">
-          <a href="{% url 'japps:app_description' app_name='Beast2' %}"><img class="des_logo" src="{% static 'japps/images/cropped-Beast2-logo.jpg' %}" alt="[IMAGE: Beast2 logo]" style="vertical-align:middle" /></a>
+          <a href="{% url 'japps:app_description' app_name='Beast2' %}"><img class="des_logo" src="{% static 'japps/images/cropped-Beast2-logo.jpg' %}" alt="[IMAGE: Beast2 logo]"  /></a>
+          <p></p>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+          <a href="{% url 'japps:app_description' app_name='bedtools' %}"><img class="des_logo" src="{% static 'japps/images/bedtools.png' %}" alt="[IMAGE: bedtools logo]" /></a>
+          <p></p>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+          <a href="{% url 'japps:app_description' app_name='BLAST' %}"><img class="des_logo" src="{% static 'japps/images/blast.png' %}" alt="[IMAGE: BLAST logo]" /></a>
+          <p></p>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+          <a href="{% url 'japps:app_description' app_name='btrim' %}"><img class="des_logo" src="{% static 'japps/images/btrim.png' %}" alt="[IMAGE: btrim logo]" /></a>
+          <p></p>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+          <a href="{% url 'japps:app_description' app_name='Cufflinks' %}"><img class="des_logo" src="{% static 'japps/images/cufflinks.png' %}" alt="[IMAGE: Cufflinks logo]" /></a>
+          <p></p>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+          <a href="{% url 'japps:app_description' app_name='cutadapt' %}"><img class="des_logo" src="{% static 'japps/images/cutadapt.png' %}" alt="[IMAGE: cutadapt logo]" /></a>
           <p></p>
         </div>
         <div class="col-xs-12 col-sm-4">
@@ -45,7 +65,27 @@
           <p></p>
         </div>
         <div class="col-xs-12 col-sm-4">
+          <a href="{% url 'japps:app_description' app_name='MUSCLE' %}"><img class="des_logo" src="{% static 'japps/images/muscle.png' %}" alt="[IMAGE: MUSCLE logo]" /></a>
+          <p></p>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+          <a href="{% url 'japps:app_description' app_name='Ontologizer' %}"><img class="des_logo" src="{% static 'japps/images/ontologizer.png' %}" alt="[IMAGE: Ontologizer logo]" /></a>
+          <p></p>
+        </div>
+        <div class="col-xs-12 col-sm-4">
           <a href="{% url 'japps:app_description' app_name='RAxML' %}"><img class="des_logo" src="{% static 'japps/images/raxml.jpg' %}" alt="[IMAGE: RAxML logo]" /></a>
+          <p></p>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+          <a href="{% url 'japps:app_description' app_name='SAMtools' %}"><img class="des_logo" src="{% static 'japps/images/samtools.png' %}" alt="[IMAGE: SAMtools logo]" /></a>
+          <p></p>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+          <a href="{% url 'japps:app_description' app_name='Sickle' %}"><img class="des_logo" src="{% static 'japps/images/sickle.png' %}" alt="[IMAGE: Sickle logo]" /></a>
+          <p></p>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+          <a href="{% url 'japps:app_description' app_name='TopHat' %}"><img class="des_logo" src="{% static 'japps/images/tophat.png' %}" alt="[IMAGE: TopHat logo]" /></a>
           <p></p>
         </div>
         <div class="col-xs-12 col-sm-4">
@@ -53,7 +93,7 @@
           <p></p>
         </div>
         <div class="col-xs-12 col-sm-4">
-          <a href=""/></a>
+          <a></a>
           <p></p>
         </div>
       </div>
@@ -68,34 +108,34 @@
           <a href="{% url 'japps:app_description' app_name='Polymarker' %}"><img class="des_logo" src="{% static 'japps/images/polymarker-300x74.png' %}" alt="[IMAGE: Polymarker logo]" /></a>
         </div>
         <div class="col-xs-12 col-sm-2">
-          <a href="{% url 'japps:app_description' app_name='bedtools' %}"><img class="des_logo" src="{% static 'japps/images/bedtools.png' %}" alt="[IMAGE: bedtools logo]" /></a>
+
         </div>
         <div class="col-xs-12 col-sm-2">
-          <a href="{% url 'japps:app_description' app_name='BLAST' %}"><img class="des_logo" src="{% static 'japps/images/blast.png' %}" alt="[IMAGE: BLAST logo]" /></a>
+
         </div>
         <div class="col-xs-12 col-sm-2">
-          <a href="{% url 'japps:app_description' app_name='btrim' %}"><img class="des_logo" src="{% static 'japps/images/btrim.png' %}" alt="[IMAGE: btrim logo]" /></a>
+
         </div>
         <div class="col-xs-12 col-sm-2">
-          <a href="{% url 'japps:app_description' app_name='Cufflinks' %}"><img class="des_logo" src="{% static 'japps/images/cufflinks.png' %}" alt="[IMAGE: Cufflinks logo]" /></a>
+
         </div>
         <div class="col-xs-12 col-sm-2">
-          <a href="{% url 'japps:app_description' app_name='cutadapt' %}"><img class="des_logo" src="{% static 'japps/images/cutadapt.png' %}" alt="[IMAGE: cutadapt logo]" /></a>
+
         </div>
         <div class="col-xs-12 col-sm-2">
-          <a href="{% url 'japps:app_description' app_name='MUSCLE' %}"><img class="des_logo" src="{% static 'japps/images/muscle.png' %}" alt="[IMAGE: MUSCLE logo]" /></a>
+
         </div>
         <div class="col-xs-12 col-sm-2">
-          <a href="{% url 'japps:app_description' app_name='Ontologizer' %}"><img class="des_logo" src="{% static 'japps/images/ontologizer.png' %}" alt="[IMAGE: Ontologizer logo]" /></a>
+
         </div>
         <div class="col-xs-12 col-sm-2">
-          <a href="{% url 'japps:app_description' app_name='SAMtools' %}"><img class="des_logo" src="{% static 'japps/images/samtools.png' %}" alt="[IMAGE: SAMtools logo]" /></a>
+
         </div>
         <div class="col-xs-12 col-sm-2">
-          <a href="{% url 'japps:app_description' app_name='Sickle' %}"><img class="des_logo" src="{% static 'japps/images/sickle.png' %}" alt="[IMAGE: Sickle logo]" /></a>
+
         </div>
         <div class="col-xs-12 col-sm-2">
-          <a href="{% url 'japps:app_description' app_name='TopHat' %}"><img class="des_logo" src="{% static 'japps/images/tophat.png' %}" alt="[IMAGE: TopHat logo]" /></a>
+
         </div>
 
   </div>
