add terms and conditions of contact us

--- a/japps/templates/japps/contact.html
+++ b/japps/templates/japps/contact.html
@@ -42,6 +42,7 @@ return t;
     <table>
       {{ form.as_table }}
     </table>
+    <p><small> Your privacy is important to us and we want to ensure that you know what information we collect from you, how it is stored and processed, so please read the <a href="http://www.earlham.ac.uk/cookies-and-privacy">terms and privacy policy</a> of our Institute.</small></p>
     <input type="submit" value="Send"/>
   </form>
 {% endblock %}
