add terms for contact us 2

--- a/japps/templates/japps/contact.html
+++ b/japps/templates/japps/contact.html
@@ -42,7 +42,7 @@ return t;
     <table>
       {{ form.as_table }}
     </table>
-    <p><small> Your privacy is important to us and we want to ensure that you know what information we collect from you, how it is stored and processed, so please read the <a href="http://www.earlham.ac.uk/cookies-and-privacy">terms and privacy policy</a> of our Institute.</small></p>
+    <p><small>We will use your name to identify who raised the service request and the email address to contact you about the queries or information directly related to the provision on the service you are subscribing or contacting us about.</small></p>
     <input type="submit" value="Send"/>
   </form>
 {% endblock %}
