--- a/japps/templates/japps/contact.html
+++ b/japps/templates/japps/contact.html
@@ -42,7 +42,7 @@ return t;
     <table>
       {{ form.as_table }}
     </table>
-    <p><small>We will use your name to identify who raised the service request and the email address to contact you about the queries or information directly related to the provision on the service you are subscribing or contacting us about.</small></p>
+    <p><small>We will use your name to identify who raised the service request and the email address to contact you about the queries or information directly related to the provision of the service you are subscribing or contacting us about.</small></p>
     <input type="submit" value="Send"/>
   </form>
 {% endblock %}
